@@ -610,6 +610,7 @@ protected:
 	QMenu *optionsMenu;
 	QMenu *helpMenu;
 
+	QMenu * disc_menu;
 	QMenu * subtitlestrack_menu;
 #if PROGRAM_SWITCH
 	QMenu * programtrack_menu;
